# recipe-app-api

./: .gitignore  Dockerfile  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/: .flake8
app/app/: settings.py
app/core/management/commands/: wait_for_db.py
