[project]
name = "recipe-app-api"
version = "0.1.0"
description = ""
authors = [
    {name = "aga",email = "agatonovic7@gmail.com"}
]
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=5.1.7,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"

